--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     //var viewer = new Cesium.Viewer('cesiumContainer');
 
 	
-	
+	var viewer = new Cesium.Viewer('cesiumContainer', {
+    imageryProvider : new Cesium.ArcGisMapServerImageryProvider({
+        url : 'http://server.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer'
+    }),
+    baseLayerPicker : false
+	});
 	
 	var layers = viewer.imageryLayers;
 	
