--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Cesium Starter App</title>
+  <title>Georgia Historical Imagery</title>
   <script src="ThirdParty/Cesium/Cesium.js"></script>
   <style>
       @import url(ThirdParty/Cesium/Widgets/widgets.css);
